--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products:index' %}">Каталог <i class="fas fa-shopping-bag"></i>
+                    <a class="nav-link" href="{% url 'products:index' %}">Կատալոգ <i class="fas fa-shopping-bag"></i>
                     </a>
                 </li>
                 {% if user.is_authenticated %}
@@ -45,13 +45,13 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
+                                <a class="dropdown-item" href="{% url 'users:profile' %}">Էջ</a>
                             </li>
-                            <li><a class="dropdown-item" href="#">Заказы</a></li>
+                            <li><a class="dropdown-item" href="#">Պատվերներ</a></li>
                             {% if user.is_superuser or user.is_staff %}
                                 <li>
                                     <a class="dropdown-item" href="{% url 'admin:index' %}">
-                                        Админ-панель
+                                        Ադմինիստրատորի վահանակ
                                     </a>
                                 </li>
                             {% endif %}
@@ -67,7 +67,7 @@
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'users:login' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
+                        <a class="nav-link" href="{% url 'users:login' %}">Մուտք <i class="fas fa-sign-in-alt"></i></a>
                     </li>
                 {% endif %}
             </ul>
