--- a/products/templates/products/baskets.html
+++ b/products/templates/products/baskets.html
@@ -2,7 +2,7 @@
 
 {% if baskets %}
     <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
-        Корзина <span class="badge badge-secondary badge-pill">{{ total_quantity }}</span>
+        Զամբյուղ <span class="badge badge-secondary badge-pill">{{ total_quantity }}</span>
     </h4>
     {% for basket in baskets %}
         <div class="card mb-3">
@@ -30,15 +30,15 @@
     {% endfor %}
     <div class="card mb-3">
         <div class="card-footer">
-            <p class="float-left">Итого</p>
+            <p class="float-left">Ընդամենը</p>
             <h4 class="float-right">{{ total_sum|intcomma }} դրամ</h4>
         </div>
     </div>
     <a class="btn btn-success btn-lg float-right" href="#">
-        Оформить заказ
+        Պատվերի ընդունում
     </a>
 {% else %}
     <h4 class="mt-3 mb-3 text-center">
-        Корзина пуста
+        Զամբյուղը դատարկ է
     </h4>
 {% endif %}
