--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -15,12 +15,12 @@
             <div class="col-lg-6">
                 <h1 class="mt-5">Store</h1>
                 <p>
-                    Новые образы и лучшие бренды на Store.
-                    Бесплатная доставка по всему миру! Аутлет: до -70% Собственный бренд. -20% новым покупателям.
+                   Նոր պատկերներ և լավագույն ապրանքանիշեր Խանութում:
+                     Անվճար առաքում ամբողջ աշխարհում: Ելք՝ մինչև -70% Սեփական ապրանքանիշ: -20% նոր հաճախորդների համար:
                 </p>
                 <button id="start-purchase-btn" type="button" class="btn btn-lg">
                     <a id="start-purchase-link" href="{% url 'products:index' %}">
-                        Начать покупки
+                        Սկսեք գնումներ կատարել
                     </a>
                 </button>
             </div>
