--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -25,23 +25,23 @@
                 </div>
                 {% endif %}
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Авторизация</h3>
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Ավտորիզացիա</h3>
                     </div>
                     <div class="card-body">
                         <form action="{% url 'users:login' %}" method="post">
                             {% csrf_token %}
                             <div class="form-group">
                                 <label class="small mb-1" for="{{ form.username.id_for_label }}">
-                                    Имя пользователя
+                                    Օգտագործողի անունը
                                 </label>
                                 {{ form.username }}
                             </div>
                             <div class="form-group">
-                                <label class="small mb-1" for="{{ form.password.id_for_label }}">Пароль</label>
+                                <label class="small mb-1" for="{{ form.password.id_for_label }}">Գաղտնաբառ</label>
                                 {{ form.password }}
                             </div>
                             <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-                                <a class="small" href="#">Забыли пароль?</a>
+                                <a class="small" href="#">Մոռացել եք գաղտնաբառը?</a>
                                 <input class="btn btn-primary" type="submit" value="Авторизоваться">
                             </div>
                             <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
@@ -61,8 +61,8 @@
                         </form>
                     </div>
                     <div class="card-footer text-center">
-                        <div class="small"><a href="{% url 'users:registration' %}">Нужен аккаунт?
-                            Зарегистрируйся!</a></div>
+                        <div class="small"><a href="{% url 'users:registration' %}">Անհրաժեշտ է հաշիվ?
+                            Գրանցվել!</a></div>
                     </div>
                 </div>
             </div>
