--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7">
-                <h4 class="mt-3 mb-3">Профиль</h4>
+                <h4 class="mt-3 mb-3">Էջ</h4>
                 <div class="col-lg-12 text-center">
                     <img width="100" height="100"
                          src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'vendor/img/users/default_avatar.jpg' %} {% endif %}"
@@ -20,13 +20,13 @@
                     <div class="form-row">
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="{{ form.first_name.id_for_label }}">Имя</label>
+                                <label class="small mb-1" for="{{ form.first_name.id_for_label }}">Անուն</label>
                                 {{ form.first_name }}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="{{ form.last_name.id_for_label }}">Фамилия</label>
+                                <label class="small mb-1" for="{{ form.last_name.id_for_label }}">Ազգանուն</label>
                                 {{ form.last_name }}
                             </div>
                         </div>
@@ -36,19 +36,19 @@
                             <div class="custom-file">
                                 {{ form.image }}
                                 <label class="custom-file-label" for="{{ form.image.id_for_label }}">
-                                    Выберите изображение
+                                    Ընտրեք պատկեր
                                 </label>
                             </div>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя пользователя</label>
+                            <label class="small mb-1" for="{{ form.username.id_for_label }}">Օգտագործողի անունը</label>
                             {{ form.username }}
                         </div>
                         <div class="col-lg-6">
                             <label class="small mb-1" for="{{ form.email.id_for_label }}">
-                                Адрес электронной почты
+                                Էլ. փոստի հասցե
                             </label>
                             {{ form.email }}
                         </div>
